fix yaml and postman collection
